feat: init register user endpoint
