# api.yml
@@ -40,8 +40,64 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/ErrorResponse"
+
+  /users:
+    post:
+      summary: Register a new user
+      description: Endpoint to register a new user.
+      operationId: registerUser
+      tags:
+        - User
+      requestBody:
+        description: User registration details
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/RegisterUserRequest"
+      responses:
+        '201':
+          description: Success create user
+          content:
+            application/json:    
+              schema:
+                $ref: "#/components/schemas/RegisterUserResponse"
+
 components:
   schemas:
+    RegisterUserRequest:
+      type: object
+      required:
+        - full_name
+        - phone_number
+        - password
+      properties:
+        full_name:
+          type: string
+          description: User's full name
+        phone_number:
+          type: string
+          description: User's phone number
+        password:
+          type: string
+          description: User's password
+    RegisterUserResponse:
+      type: object
+      required:
+        - success
+        - message
+      properties:
+        success:
+          type: boolean
+        message:
+          type: string
+        data:
+          type: object
+          required:
+            - id
+          properties:
+            id:
+              type: integer
     HelloResponse:
       type: object
       required:
